--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.8",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -32,6 +33,21 @@
     "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.42.1",
     "@tanstack/react-table": "^8.15.3",
+    "@tiptap/extension-bold": "^2.11.9",
+    "@tiptap/extension-highlight": "^2.11.9",
+    "@tiptap/extension-image": "^2.11.9",
+    "@tiptap/extension-italic": "^2.11.9",
+    "@tiptap/extension-link": "^2.11.9",
+    "@tiptap/extension-subscript": "^2.11.9",
+    "@tiptap/extension-superscript": "^2.11.9",
+    "@tiptap/extension-task-item": "^2.11.9",
+    "@tiptap/extension-task-list": "^2.11.9",
+    "@tiptap/extension-text-align": "^2.11.9",
+    "@tiptap/extension-typography": "^2.11.9",
+    "@tiptap/extension-underline": "^2.11.9",
+    "@tiptap/pm": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
@@ -48,6 +64,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -55,6 +72,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "sass": "^1.87.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vercel": "39.1.1"
