--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@supabase/supabase-js": "^2.42.1",
     "@tanstack/react-table": "^8.15.3",
     "@tiptap/extension-bold": "^2.11.9",
+    "@tiptap/extension-heading": "^2.11.9",
     "@tiptap/extension-highlight": "^2.11.9",
     "@tiptap/extension-image": "^2.11.9",
     "@tiptap/extension-italic": "^2.11.9",
